package com.aaron.yespdf.main

/**
 * @author Aaron aaronzzxup@gmail.com
 */
class AllDeleteEvent(val dirList: List<String> = listOf())