package com.aaron.yespdf.main

/**
 * @author Aaron aaronzzxup@gmail.com
 */
class OperationEvent